# latteries

./: pyproject.toml
tinker_cookbook/tinker_cookbook/: hyperparam_utils.py  image_processing_utils.py  model_info.py  public_model.py  renderers.py  test_tinker_openai_proxy.py  tinker_lora_to_hf.py  tinker_openai_proxy.py  tokenizer_utils.py  try_openai_api.py
tinker_cookbook/tinker_cookbook/chat_app/: tinker_chat_cli.py
tinker_cookbook/tinker_cookbook/distillation/: datasets.py  train_on_policy.py  train_on_policy_with_sys.py
tinker_cookbook/tinker_cookbook/eval/: custom_evaluators.py  inspect_evaluators.py  inspect_utils.py
tinker_cookbook/tinker_cookbook/preference/: comparison_policy_evaluator.py  dpo_datasets.py  preference_datasets.py  train_dpo.py  types.py
tinker_cookbook/tinker_cookbook/recipes/: README.md  rl_loop.py  sl_loop.py
tinker_cookbook/tinker_cookbook/recipes/chat_sl/: README.md  train.py
tinker_cookbook/tinker_cookbook/recipes/code_rl/: code_env.py
tinker_cookbook/tinker_cookbook/recipes/distillation/: off_policy_reasoning.py
tinker_cookbook/tinker_cookbook/recipes/math_rl/: README.md
tinker_cookbook/tinker_cookbook/recipes/multiplayer_rl/guess_number/: env.py
tinker_cookbook/tinker_cookbook/recipes/multiplayer_rl/text_arena/: env.py
tinker_cookbook/tinker_cookbook/recipes/preference/: README.md
tinker_cookbook/tinker_cookbook/recipes/prompt_distillation/: train.py
tinker_cookbook/tinker_cookbook/recipes/rubric/: data.py  debug_env.py  env.py  generate_data.py  prometheus_experimental.py  train.py
tinker_cookbook/tinker_cookbook/recipes/search_tool/: offline_eval.py  search_env.py  tools.py  train.py
tinker_cookbook/tinker_cookbook/recipes/verifiers_rl/: tinker_openai.py
tinker_cookbook/tinker_cookbook/recipes/vlm_classifier/: data.py  eval.py  eval_sweep.py  sweep.py  train.py
tinker_cookbook/tinker_cookbook/renderers/: __init__.py  base.py  deepseek_v3.py  gpt_oss.py  llama3.py  role_colon.py
tinker_cookbook/tinker_cookbook/rl/: data_processing.py  preference_envs.py  problem_env.py  rollouts.py  train.py  types.py
tinker_cookbook/tinker_cookbook/scripts/: test_tool_calling_e2e.py
tinker_cookbook/tinker_cookbook/supervised/: common.py  data.py  train.py  types.py
tinker_cookbook/tinker_cookbook/utils/: logtree.py  lr_scheduling.py  ml_log.py
(+4 files in other folders)
